- Separated concerns: Moved currency/API behaviour & document selectors

--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
 
 <div class="form-card card">
 	<div class="sidebar">
-		<!-- Sidebar start -->
 		<div class="has-text-white">
 			<div class="mb-5 sidebar-step active" data-step="1">
 				<p class="is-size-7 has-text-link">STEP 1</p>
@@ -64,8 +63,8 @@
 			</div>
 		</div>
 	</div>
-	<!-- Sidebar end -->
 
+	<!-- Form -->
 	<div class="step-container">
 		<div id="mobile-step-indicator" class="is-hidden-tablet mb-4">
 			<p class="is-size-6 has-text-weight-bold has-text-centered has-text-link">STEP 1</p>
