--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<link rel="icon" type="image/png" href="./assets/images/box.png">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
 	      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
 	      crossorigin="anonymous" referrerpolicy="no-referrer"/>
@@ -46,19 +49,19 @@
 	<div class="sidebar">
 		<div class="has-text-white">
 			<div class="mb-5 sidebar-step active" data-step="1">
-				<p class="is-size-7 has-text-link">STEP 1</p>
+				<p class="is-size-7 has-text-white">STEP 1</p>
 				<p class="is-size-6 has-text-weight-bold">Your Info</p>
 			</div>
 			<div class="mb-5 sidebar-step" data-step="2">
-				<p class="is-size-7 has-text-link">STEP 2</p>
+				<p class="is-size-7 has-text-white">STEP 2</p>
 				<p class="is-size-6 has-text-weight-bold">Select Plan</p>
 			</div>
 			<div class="mb-5 sidebar-step" data-step="3">
-				<p class="is-size-7 has-text-link">STEP 3</p>
+				<p class="is-size-7 has-text-white">STEP 3</p>
 				<p class="is-size-6 has-text-weight-bold">Ad-Ons</p>
 			</div>
 			<div class="sidebar-step" data-step="4">
-				<p class="is-size-7 has-text-link">STEP 4</p>
+				<p class="is-size-7 has-text-white">STEP 4</p>
 				<p class="is-size-6 has-text-weight-bold">Summary</p>
 			</div>
 		</div>
@@ -67,11 +70,11 @@
 	<!-- Form -->
 	<div class="step-container">
 		<div id="mobile-step-indicator" class="is-hidden-tablet mb-4">
-			<p class="is-size-6 has-text-weight-bold has-text-centered has-text-link">STEP 1</p>
+			<p class="is-size-6 has-text-weight-bold has-text-centered has-text-white">STEP 1</p>
 		</div>
 		<!-- Step 1 start -->
 		<div id="step-1" class="step-content">
-			<h1 class="title is-3">Personal info</h1>
+			<h1 class="title is-3">Welcome, Gamer!</h1>
 			<p class="subtitle is-6">Please provide your name, email address, and phone number.</p>
 
 			<div class="field mb-5">
