--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-	<link rel="icon" type="image/png" href="./assets/images/box.png">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="./assets/images/box.png" rel="icon" type="image/png">
+	<link href="https://fonts.googleapis.com" rel="preconnect">
+	<link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
 	<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+	<link crossorigin="anonymous" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
 	      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-	      crossorigin="anonymous" referrerpolicy="no-referrer"/>
-	<link rel="stylesheet" href="./styles.css">
+	      referrerpolicy="no-referrer" rel="stylesheet"/>
+	<link href="./styles.css" rel="stylesheet">
 
 	<title>Payment | The Package</title>
 </head>
@@ -21,7 +21,7 @@
 </div>
 
 <div class="page-title">
-	<img src="./assets/images/box.png" alt="The Package Logo"
+	<img alt="The Package Logo" src="./assets/images/box.png"
 	     style="max-width: 50px; height: auto; margin-bottom: -10px;">
 	<h1 class="title is-size-2">The Package</h1>
 </div>
@@ -31,13 +31,13 @@
 	<div class="modal-card">
 		<header class="modal-card-head">
 			<p class="modal-card-title is-size-5">Settings</p>
-			<button class="delete" aria-label="close"></button>
+			<button aria-label="close" class="delete"></button>
 		</header>
 		<section class="modal-card-body">
 			<div class="field is-flex is-align-items-center is-justify-content-space-between">
 				<label class="label mb-0" style="color: white">Enable Test Mode</label>
 				<label class="switch">
-					<input type="checkbox" id="test-mode-toggle">
+					<input id="test-mode-toggle" type="checkbox">
 					<span class="slider round"></span>
 				</label>
 			</div>
@@ -69,32 +69,32 @@
 
 	<!-- Form -->
 	<div class="step-container">
-		<div id="mobile-step-indicator" class="is-hidden-tablet mb-4">
+		<div class="is-hidden-tablet mb-4" id="mobile-step-indicator">
 			<p class="is-size-6 has-text-weight-bold has-text-centered has-text-white">STEP 1</p>
 		</div>
 		<!-- Step 1 start -->
-		<div id="step-1" class="step-content">
+		<div class="step-content" id="step-1">
 			<h1 class="title is-3">Welcome, Gamer!</h1>
 			<p class="subtitle is-6">Please provide your name, email address, and phone number.</p>
 
 			<div class="field mb-5">
 				<label class="label" for="name">Name</label>
 				<div class="control">
-					<input class="input" type="text" placeholder="e.g. Stephen King" id="name">
+					<input class="input" id="name" placeholder="e.g. Stephen King" type="text">
 				</div>
 			</div>
 
 			<div class="field mb-5">
 				<label class="label" for="email">Email Address</label>
 				<div class="control">
-					<input class="input" type="email" placeholder="e.g. stephenking@lorem.com" id="email">
+					<input class="input" id="email" placeholder="e.g. stephenking@lorem.com" type="email">
 				</div>
 			</div>
 
 			<div class="field mb-6">
 				<label class="label" for="phone">Phone Number</label>
 				<div class="control">
-					<input class="input" type="tel" placeholder="e.g. +1 234 567 890" id="phone">
+					<input class="input" id="phone" placeholder="e.g. +1 234 567 890" type="tel">
 				</div>
 			</div>
 
@@ -105,7 +105,7 @@
 		<!-- Step 1 end -->
 
 		<!-- Step 2 start -->
-		<div id="step-2" class="step-content hidden">
+		<div class="step-content hidden" id="step-2">
 			<h1 class="title is-3">Select your plan</h1>
 			<p class="subtitle is-6">You have the option of monthly or yearly billing.</p>
 
@@ -114,7 +114,7 @@
 				<div class="control">
 					<div class="select is-fullwidth">
 						<select id="currency-selector">
-							<option value="GBP" selected>£ (GBP)</option>
+							<option selected value="GBP">£ (GBP)</option>
 							<option value="EUR">€ (EUR)</option>
 							<option value="USD">$ (USD)</option>
 						</select>
@@ -123,21 +123,21 @@
 			</div>
 
 			<div class="plan-options">
-				<div class="plan-box is-selected">
+				<div class="plan-box is-selected" data-plan="Arcade">
 					<i class="fas fa-gamepad is-size-3 has-text-warning"></i>
 					<div>
 						<p class="has-text-weight-bold">Arcade</p>
 						<p class="has-text-grey">£9/mo</p>
 					</div>
 				</div>
-				<div class="plan-box">
+				<div class="plan-box" data-plan="Advanced">
 					<i class="fas fa-keyboard is-size-3 has-text-danger"></i>
 					<div>
 						<p class="has-text-weight-bold">Advanced</p>
 						<p class="has-text-grey">£12/mo</p>
 					</div>
 				</div>
-				<div class="plan-box">
+				<div class="plan-box" data-plan="Pro">
 					<i class="fas fa-desktop is-size-3 has-text-info"></i>
 					<div>
 						<p class="has-text-weight-bold">Pro</p>
@@ -150,7 +150,7 @@
 			     style="border-radius: 8px;">
 				<span class="has-text-weight-bold mr-4" id="monthly-label">Monthly</span>
 				<label class="switch">
-					<input type="checkbox" id="billing-toggle">
+					<input id="billing-toggle" type="checkbox">
 					<span class="slider round"></span>
 				</label>
 				<span class="has-text-grey ml-4" id="yearly-label">Yearly</span>
@@ -167,13 +167,13 @@
 		<!-- Step 2 end -->
 
 		<!-- Step 3 start -->
-		<div id="step-3" class="step-content hidden">
+		<div class="step-content hidden" id="step-3">
 			<h1 class="title is-3">Pick add-ons</h1>
 			<p class="subtitle is-6">Add-ons help enhance your gaming experience.</p>
 
-			<div class="addon-row">
+			<div class="addon-row" data-addon="Online service">
 				<label class="checkbox mr-4">
-					<input type="checkbox" checked>
+					<input checked type="checkbox">
 				</label>
 				<div style="flex-grow: 1;">
 					<p class="has-text-weight-bold">Online service</p>
@@ -182,9 +182,9 @@
 				<p class="has-text-primary">+£1/mo</p>
 			</div>
 
-			<div class="addon-row">
+			<div class="addon-row" data-addon="Larger storage">
 				<label class="checkbox mr-4">
-					<input type="checkbox" checked>
+					<input checked type="checkbox">
 				</label>
 				<div style="flex-grow: 1;">
 					<p class="has-text-weight-bold">Larger storage</p>
@@ -193,7 +193,7 @@
 				<p class="has-text-primary">+£2/mo</p>
 			</div>
 
-			<div class="addon-row">
+			<div class="addon-row" data-addon="Customizable Profile">
 				<label class="checkbox mr-4">
 					<input type="checkbox">
 				</label>
@@ -212,7 +212,7 @@
 		<!-- Step 3 end -->
 
 		<!-- Step 4 start -->
-		<div id="step-4" class="step-content hidden">
+		<div class="step-content hidden" id="step-4">
 			<h1 class="title is-3">Finishing up</h1>
 			<p class="subtitle is-6">Double-check everything looks OK before confirming.</p>
 
@@ -221,7 +221,7 @@
 				     style="border-bottom: 1px solid #dbdbdb;">
 					<div>
 						<p class="has-text-weight-bold">Arcade (Monthly)</p>
-						<a href="#" class="is-size-7 has-text-grey" style="text-decoration: underline;">Change</a>
+						<a class="is-size-7 has-text-grey" href="#" style="text-decoration: underline;">Change</a>
 					</div>
 					<p class="has-text-weight-bold">£9/mo</p>
 				</div>
@@ -248,7 +248,7 @@
 		<!-- Step 4 end -->
 
 		<!-- Step 5 start -->
-		<div id="step-5" class="step-content hidden has-text-centered py-6">
+		<div class="step-content hidden has-text-centered py-6" id="step-5">
 			<div class="mb-5">
 				<i class="fas fa-check-circle has-text-danger is-size-1"></i>
 			</div>
@@ -264,6 +264,6 @@
 	</div>
 </div>
 
-<script type="module" src="./form.js"></script>
+<script src="./form.js" type="module"></script>
 </body>
 </html>
